user input added

--- a/Felinemotion/upload.html
+++ b/Felinemotion/upload.html
@@ -1,9 +1,7 @@
-<html>
-   <body>
-      <form action = "http://localhost:5000/uploader" method = "POST"
-         enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
-         <input type = "submit"/>
-      </form>
-   </body>
-</html>
+<!doctype html>
+    <title>Felinemotion</title>
+        <h1>Upload an mp4 file</h1>
+        <form action = "http://localhost:5000/uploader" method = "POST" enctype = "multipart/form-data">
+            <input type=file name=file>
+            <input type=submit value=Upload>
+        </form>
